Revert "Fix text overflow p element"
This reverts commit fb4493233b50e4a0a511be0ce9975966032fb2a2.

--- a/internal/static/css/01-pico.css
+++ b/internal/static/css/01-pico.css
@@ -374,8 +374,7 @@
      font-weight: normal; }
  
  p {
-   margin-bottom: 0.75rem;
-   word-break: break-all; }
+   margin-bottom: 0.75rem; }
  
  small {
    font-size: 85%; }
